Game will reset when someone reaches 5

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="title"><h1>Rock, Paper, Scissors</h1></div>
     
     <div class="score">
-        <span class="player-score">Player: </span>
-        <span class="computer-score">Computer :</span>
+        <span class="player-score">Player: 0</span>
+        <span class="computer-score">Computer: 0</span>
     </div>
 
     <div class="buttons">
