--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lacquer&amp;family=Roboto&amp;display=swap" rel="stylesheet">
     <title>JavaScript</title>
 </head>
 <body class="body">
-    <div class="title"><h1>Rock, Paper, Scissors</h1></div>
-    
-    <div class="score">
-        <span class="player-score">Player: 0</span>
-        <span class="computer-score">Computer: 0</span>
-    </div>
+    <div class="title"><h1>The Battle For Mankind</h1></div>
+    <div class="title-message"><h2>DO YOU HAVE WHAT IT TAKES TO SAVE HUMANITY?</h2></div>
 
+    <div class="message">Choose your weapon!</div>
     <div class="buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
-    
+
+      <div class="score">
+        <span class="player-score">You: 0</span>
+        <span class="computer-score">Computer: 0</span>
+    </div>
+
     <div class='History'>
         <h3>Match History</h3>
         <div class="results">            
